# squidOS

./: .gitattributes  .gitignore  Cargo.toml  GEMINI.md  README.md  bits64pie.json  info.txt  make.bat
apps/cat/src/: main.rs
apps/fps_test/: Cargo.toml
apps/fps_test/src/: main.rs
apps/shell/: Cargo.toml
apps/shell/src/: builtins.rs  main.rs  parser.rs  utils.rs
apps/sysmon/: Cargo.toml
apps/sysmon/src/: main.rs
apps/taskbar/src/: main.rs
apps/term/: Cargo.toml
apps/term/src/: buffer.rs  main.rs  types.rs
apps/tmap/: Cargo.toml
apps/tmap/src/: main.rs
apps/wasm_test/: Cargo.toml
apps/wasm_test/src/: main.rs
disk/: thnx.txt
elfic/: Cargo.toml
elfic/src/: header.rs  lib.rs  program_header.rs  relocation.rs  section_header.rs  symbol.rs
imports/: composer.rs  display.rs  exceptions.rs  main.rs
imports/gui/: Cargo.toml
imports/gui/src/: display.rs  event.rs  font_manager.rs  gui.rs  lib.rs  main_loop.rs  style.rs  widget.rs  window.rs
imports/libk/src/: elf.rs  heap.rs  io.rs  lib.rs  syscall.rs
inkui/: Cargo.toml
inkui/src/: event.rs  layout.rs  lib.rs  math.rs  types.rs  widget.rs  window.rs
inkui/src/graphics/: mod.rs  primitives.rs
kernel/: Cargo.toml  linker.ld
kernel/src/: boot.rs  composer.rs  debug.rs  main.rs  sync.rs  tss.rs
kernel/src/drivers/: mod.rs  (+3 more)
libs/libc/: Cargo.toml
std/: Cargo.toml
std/src/: graphics.rs  lib.rs  os.rs  runtime.rs  sync.rs
swiftboot/: bits64.json  make.bat
tree/: add.wasm  hello.txt  torture.wasm  user  user.elf  wasm_test.wasm
userland/: Cargo.toml
userland/src/: main.rs
(+84 files in other folders)
